--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="default_text_size">20sp</dimen>
+    <dimen name="normal_padding">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
+    <dimen name="text_normal">18sp</dimen>
+    <dimen name="large_padding">24dp</dimen>
 </resources>
